Update birthday message and HTML structure

--- a/index.html
+++ b/index.html
@@ -5,39 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Feliz Cumpleaños Amor!</title>
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
 
-    <div class="background-decor">
-        <div class="balloon"></div>
+    <div class="decoraciones">
         <div class="balloon"></div>
         <div class="balloon"></div>
         <div class="balloon"></div>
         <div class="balloon"></div>
     </div>
 
-    <div class="main-content">
+    <div class="wrapper">
         <h1 class="titulo">¡Feliz Cumpleaños, Mi Amor!</h1>
         
         <div class="envelope-wrapper" onclick="abrirCarta()">
             <div class="envelope">
-                <div class="bottom-flap"></div>
-                <div class="side-flaps"></div>
                 <div class="paper">
                     <div class="message">
-                        <h2>Para mi vida:</h2>
-                        <p>Eres la persona que ilumina mis días. En este cumpleaños quiero recordarte lo mucho que te amo y lo especial que eres para mí.</p>
-                        <p class="signature">Por siempre juntos ❤️</p>
+                        <h2>Mi Amor,</h2>
+                        <p>Cada día a tu lado es una aventura. Eres mi alegría. ¡Que este año te traiga toda la felicidad del universo!</p>
+                        <p class="love">Con todo mi ser ❤️</p>
                     </div>
                 </div>
-                <div class="top-flap"></div>
             </div>
-            <div class="heart-seal">❤</div>
+            <div class="heart"></div>
         </div>
         
-        <p class="instruccion">Toca el corazón para abrir tu sorpresa</p>
+        <p class="hint">Toca el corazón para abrir tu sorpresa</p>
     </div>
 
     <script src="script.js"></script>
