Update birthday greeting and hint text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Feliz Cumpleaños Amor!</title>
+    <link rel="icon" href="https://fav.farm/🎈" />
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -18,7 +19,7 @@
     </div>
 
     <div class="wrapper">
-        <h1 class="titulo">¡Feliz Cumpleaños, Mi Amor!</h1>
+        <h1 class="titulo">¡Feliz Cumpleaños!</h1>
         
         <div class="envelope-wrapper" onclick="abrirCarta()">
             <div class="envelope">
@@ -33,7 +34,7 @@
             <div class="heart"></div>
         </div>
         
-        <p class="hint">Toca el corazón para abrir tu sorpresa</p>
+        <p class="hint">Toca el corazón</p>
     </div>
 
     <script src="script.js"></script>
