--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Feliz Cumpleaños Amor! 🎈</title>
+    <title>Felicumple🎈</title>
     <link rel="icon" href="https://fav.farm/🎈" />
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
@@ -19,15 +19,15 @@
     </div>
 
     <div class="escena">
-        <h1 class="titulo">¡Feliz Cumpleaños, Mi Amor!</h1>
+        <h1 class="titulo">¡Feliz pumpe mvd!</h1>
         
         <div class="sobre-wrapper" onclick="abrirCarta()">
             <div class="sobre">
                 <div class="carta">
                     <div class="mensaje">
-                        <h2>Mi Amor,</h2>
-                        <p>Cada día a tu lado es una aventura. Eres mi alegría. ¡Que este año te traiga toda la felicidad del universo!</p>
-                        <p class="firma">Con todo mi ser ❤️</p>
+                        <h2>Negro;</h2>
+                        <p>Espero este sea un dia especial para ti, tanto como para mí. No olvides que te amo un montón...¡Que este nuevo año este lleno de buenas cosas!</p>
+                        <p class="firma">Ane ❤️</p>
                     </div>
                 </div>
                 <div class="solapa"></div>
@@ -36,7 +36,7 @@
             <div class="corazon-sello"></div>
         </div>
         
-        <p class="instruccion">Toca el corazón para abrir tu sorpresa</p>
+        <p class="instruccion">Toca para abrir tu sorpresa</p>
     </div>
 
     <script src="script.js"></script>
