Update title and message punctuation in index.html
Removed emoji from title and fixed punctuation in message.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felicumple🎈</title>
+    <title>Felicumple</title>
     <link rel="icon" href="https://fav.farm/🎈" />
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
                 <div class="carta">
                     <div class="mensaje">
                         <h2>Negro;</h2>
-                        <p>Espero este sea un dia especial para ti, tanto como para mí. No olvides que te amo un montón...¡Que este nuevo año este lleno de buenas cosas!</p>
+                        <p>Espero este sea un dia especial para ti, tanto como para mí. No olvides que te amo un montón..Que este nuevo año este lleno de buenas cosas!</p>
                         <p class="firma">Ane ❤️</p>
                     </div>
                 </div>
